opam-version: "2.0"
name: "ecc"
version: "1.0.0"
maintainer:  "jose.pascoal@ubi.pt"
authors:     "Nick Giannarakis <ng8@princeton.edu> 
              Zoe Paraskevopoulou <zoe.paraskevopoulou@princeton.edu>"
homepage:    "https://github.com/jcfpascoal10/ECC-OCaml"
dev-repo:    "git+https://github.com/jcfpascoal10/ECC-OCaml.git"
bug-reports: "https://github.com/nickgian/ECC-OCaml/issues"
license:     "MIT"
doc:         "https://github.com/jcfpascoal10/ECC-OCaml/tree/master/doc"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"  {build}
  "ocaml" {>= "4.02.3"}
  "zarith"
  "sha"
]

synopsis: "Elliptic Curves Cryptography for OCaml"

description: """
Elliptic Curves Cryptography for OCaml. This library provides the basic 
arithmetic operations in elliptic curves over finite prime fields, 
as well as functions for Elliptic Curve digital signature algorithm and 
Elliptic Curve Diffie-Hellman key exchange protocol.
"""